[package]
name = "sudoku-hinter-rs"
version = "0.1.0"
authors = ["MASTER-SWORD\\popa9 <benjaminsandeen2016@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "*", features = ["derive"] }
rand = "0.7.3"